--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,15 +11,15 @@ set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR} ${CMAKE_MODULE_PATH})
 FIND_PACKAGE(ITK REQUIRED)
 INCLUDE(${ITK_USE_FILE})
 
-FIND_PACKAGE(VTK REQUIRED)
-INCLUDE(${VTK_USE_FILE})
-
 ADD_EXECUTABLE(MooreTracingDemo MooreTracingDemo.cpp MooreTracing.cpp)
-TARGET_LINK_LIBRARIES(MooreTracingDemo ${ITK_LIBRARIES} ${VTK_LIBRARIES})
+TARGET_LINK_LIBRARIES(MooreTracingDemo ${ITK_LIBRARIES})
 set_target_properties(MooreTracingDemo PROPERTIES COMPILE_DEFINITIONS "${DEFINITIONS}")
 INSTALL( TARGETS MooreTracingDemo RUNTIME DESTINATION ${INSTALL_DIR} )
 
 ADD_EXECUTABLE(MooreTracingExample MooreTracingExample.cpp MooreTracing.cpp)
-TARGET_LINK_LIBRARIES(MooreTracingExample ${ITK_LIBRARIES} ${VTK_LIBRARIES})
+TARGET_LINK_LIBRARIES(MooreTracingExample ${ITK_LIBRARIES})
 set_target_properties(MooreTracingExample PROPERTIES COMPILE_DEFINITIONS "${DEFINITIONS}")
 INSTALL( TARGETS MooreTracingExample RUNTIME DESTINATION ${INSTALL_DIR} )
+
+ADD_EXECUTABLE(ColorOutput ColorOutput.cpp MooreTracing.cpp)
+TARGET_LINK_LIBRARIES(ColorOutput ${ITK_LIBRARIES})
