Explicitly request ITK packages
At the moment if ITK is built against VTK (primarily for VTKGlue), if a project uses ITK but not VTK there are linker errors. A patch was submitted this morning to ITK to resolve this, but it may take a while to agree on the implementation details. Once the patch is merged, if an ITK build later than that patch is used, the FIND_PACKAGE line can be changed back to simply (ITK REQUIRED).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,8 @@ SET( INSTALL_DIR ${CMAKE_INSTALL_PREFIX} )
 # Tell CMake to also look in the source directory to find some .cmake files (Eigen3 and Umfpack)
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR} ${CMAKE_MODULE_PATH})
 
-FIND_PACKAGE(ITK REQUIRED)
+#FIND_PACKAGE(ITK REQUIRED)
+FIND_PACKAGE(ITK REQUIRED ITKCommon ITKIOImageBase ITKIOPNG ITKIOMeta ITKImageIntensity ITKColormap)
 INCLUDE(${ITK_USE_FILE})
 
 ADD_EXECUTABLE(MooreTracingDemo MooreTracingDemo.cpp MooreTracing.cpp)
